TODO-7: PATCH /api/v1/tasks/{id} — Partial Update Task (#8)